k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-dep
  labels:
    app: node-helloworld
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-helloworld
  template:
    metadata:
      labels:
        app: node-helloworld
    spec:
      containers:
      - name: node
        image: jakecooper/railway_kube:latest
        ports:
        - containerPort: 8080
