k8s/node-service.yaml

   
apiVersion: v1
kind: Service
metadata:
  name: node-svc
  labels:
    app: node-helloworld
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: node-helloworld
