k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "k8.railway-develop.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-svc
                port:
                  number: 8080
